// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with no overlay type 1`] = `
<div>
  <div
    class="file-overlay hidden"
  >
    <div
      class="overlay__indent"
    >
      <div
        class="overlay__circle"
      >
        <img
          alt="Files"
          class="overlay__files"
          src="fileOverlayImage"
        />
        <span>
          <i
            class="fa fa-upload"
            title="Upload Icon"
          />
          Drop a file to upload it.
        </span>
        <img
          alt="Logo"
          class="overlay__logo"
          src="overlayLogoImage"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with overlay type of center 1`] = `
<div>
  <div
    class="file-overlay hidden center-file-overlay"
  >
    <div
      class="overlay__indent"
    >
      <div
        class="overlay__circle"
      >
        <img
          alt="Files"
          class="overlay__files"
          src="fileOverlayImage"
        />
        <span>
          <i
            class="fa fa-upload"
            title="Upload Icon"
          />
          Drop a file to upload it.
        </span>
        <img
          alt="Logo"
          class="overlay__logo"
          src="overlayLogoImage"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with overlay type of right 1`] = `
<div>
  <div
    class="file-overlay hidden right-file-overlay"
  >
    <div
      class="overlay__indent"
    >
      <div
        class="overlay__circle"
      >
        <img
          alt="Files"
          class="overlay__files"
          src="fileOverlayImage"
        />
        <span>
          <i
            class="fa fa-upload"
            title="Upload Icon"
          />
          Drop a file to upload it.
        </span>
        <img
          alt="Logo"
          class="overlay__logo"
          src="overlayLogoImage"
        />
      </div>
    </div>
  </div>
</div>
`;
